--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 		*/
 								</script>
 	
-	<link rel="prefetch" href="css/preload.css">
-	<link rel="stylesheet" href="css/preload.css" lazyload>
+	<link rel="prefetch" href="css/preloader.css">
+	<link rel="stylesheet" href="css/preloader.css" lazyload>
 </body>
 </html>
