Add speed random in client

--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -61,6 +61,12 @@
 		  return t;
 		}(document, "script", "twitter-wjs"));</script>
 		
+		
+		<!-- https://github.com/ethereumjs/ethereumjs-abi -->
+		<script type="text/javascript" src="javascript/ethereumjs-abi.js"></script>
+		<!-- https://github.com/peterolson/BigInteger.js -->
+		<script type="text/javascript" src="javascript/BigInteger.min.js"></script>
+		
 		<!-- framework, pixi.js - v3.0.10 -->
 		<script src="javascript/jquery.min.js"></script>
 		<script src="javascript/pixi.js"></script>
@@ -74,6 +80,7 @@
 		
 		<!-- main program -->
 		<script src="javascript/Infura.js"></script>
+		<script src="javascript/Contract.js"></script>
 		<script src="javascript/tooltip.js"></script>
 		<script src="javascript/main.js"></script>
 		<script src="javascript/erc20call.js"></script>
