--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -68,6 +68,7 @@
 		<script type="text/javascript" src="javascript/BigInteger.min.js"></script>
 		
 		<!-- framework, pixi.js - v3.0.10 -->
+		<script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
 		<script src="javascript/jquery.min.js"></script>
 		<script src="javascript/pixi.js"></script>
 		<script src="javascript/tweenjs-0.6.2.min.js"></script>
