--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -69,12 +69,13 @@
 		
 		<!-- framework, pixi.js - v3.0.10 -->
 		<script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
+		<script src='https://rawgit.com/ConsenSys/eth-lightwallet/master/dist/lightwallet.min.js'></script>
 		<script src="javascript/jquery.min.js"></script>
 		<script src="javascript/pixi.js"></script>
 		<script src="javascript/tweenjs-0.6.2.min.js"></script>
 		<script src="javascript/ResizeManager.js"></script>
 		<script src="../../../js/configuration.js"></script>
-		<script src="../../../js/lightwallet.min.js"></script>
+		<!-- <script src="../../../js/lightwallet.min.js"></script> -->
 		<!-- <script src="../../../js/erc20call.js"></script> -->
 		<script src="javascript/vector.js"></script>
 		<script src="javascript/visibly.js"></script>
