--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -66,6 +66,7 @@
 		<script type="text/javascript" src="javascript/ethereumjs-abi.js"></script>
 		<!-- https://github.com/peterolson/BigInteger.js -->
 		<script type="text/javascript" src="javascript/BigInteger.min.js"></script>
+		<script type="text/javascript" src="javascript/web3.sha3.js"></script>
 		
 		<!-- framework, pixi.js - v3.0.10 -->
 		<script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
