--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -68,14 +68,20 @@
 		<script type="text/javascript" src="javascript/BigInteger.min.js"></script>
 		<script type="text/javascript" src="javascript/web3.sha3.js"></script>
 		
+		<script src="https://platform.dao.casino/api/lib/DC.js?v=1.3"></script>
+		<script>
+			document.addEventListener("DOMContentLoaded", function(){
+			  window.Casino = new CasinoJS({network: 'ropsten'});
+			  window.lightwallet = Casino.Account.lightWallet;
+			});
+		</script>
 		<!-- framework, pixi.js - v3.0.10 -->
-		<script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
 		<script src="javascript/jquery.min.js"></script>
 		<script src="javascript/pixi.js"></script>
 		<script src="javascript/tweenjs-0.6.2.min.js"></script>
 		<script src="javascript/ResizeManager.js"></script>
 		<script src="../../../js/configuration.js"></script>
-		<script src="javascript/lightwallet.min.js"></script>
+		<!-- <script src="javascript/lightwallet.min.js"></script> -->
 		<!-- <script src="../../../js/erc20call.js"></script> -->
 		<script src="javascript/vector.js"></script>
 		<script src="javascript/visibly.js"></script>
@@ -83,12 +89,14 @@
 		<!-- main program -->
 		<script src="javascript/Infura.js"></script>
 		<script src="javascript/Contract.js"></script>
+		<script src="javascript/LogicJS.js"></script>
 		<script src="javascript/tooltip.js"></script>
 		<script src="javascript/main.js"></script>
 		<script src="javascript/erc20call.js"></script>
 		<script src="javascript/ItemMixing.js"></script>
 		<script src="javascript/ScrMenu.js"></script>
 		<script src="javascript/ScrGame.js"></script>
+		<script src="javascript/ScrSpeedGame.js"></script>
 		<script src="javascript/WndInfo.js"></script>
 		<script src="javascript/WndInsurance.js"></script>
 	</head>
