--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -68,7 +68,9 @@
 		<script type="text/javascript" src="javascript/BigInteger.min.js"></script>
 		<script type="text/javascript" src="javascript/web3.sha3.js"></script>
 		
+		<!-- <script src="http://localhost:8888/static/js/bundle.js"></script> -->
 		<script src="https://platform.dao.casino/api/lib/DC.js?v=1.3"></script>
+
 		<script>
 			document.addEventListener("DOMContentLoaded", function(){
 			  window.Casino = new CasinoJS({network: 'ropsten'});
@@ -80,7 +82,10 @@
 		<script src="javascript/pixi.js"></script>
 		<script src="javascript/tweenjs-0.6.2.min.js"></script>
 		<script src="javascript/ResizeManager.js"></script>
+		
+		<script src="javascript/configuration.js"></script>
 		<script src="../../../js/configuration.js"></script>
+
 		<!-- <script src="javascript/lightwallet.min.js"></script> -->
 		<!-- <script src="../../../js/erc20call.js"></script> -->
 		<script src="javascript/vector.js"></script>
