--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -98,6 +98,7 @@
 		<script src="javascript/tooltip.js"></script>
 		<script src="javascript/main.js"></script>
 		<script src="javascript/erc20call.js"></script>
+		<script src="javascript/ItemLoading.js"></script>
 		<script src="javascript/ItemMixing.js"></script>
 		<script src="javascript/ScrMenu.js"></script>
 		<script src="javascript/ScrGame.js"></script>
