--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -95,6 +95,7 @@
 		<script src="javascript/Infura.js"></script>
 		<script src="javascript/Contract.js"></script>
 		<script src="javascript/LogicJS.js"></script>
+		<script src="javascript/daoLang.js"></script>
 		<script src="javascript/tooltip.js"></script>
 		<script src="javascript/main.js"></script>
 		<script src="javascript/erc20call.js"></script>
