--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, maximum-scale=1.0"/>
+		<meta name="HandheldFriendly" content="True"/>
 		<title>Blackjack</title>
 		
 		<script src="javascript/webfont.js"></script>
