--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -109,6 +109,7 @@
 		<script src="javascript/WndInfo.js"></script>
 		<script src="javascript/WndInsurance.js"></script>
 		<script src="javascript/WndBank.js"></script>
+		<script src="javascript/WndHistory.js"></script>
 	</head>
 	<body id="preloadko" onload="initGame()">
 		<script>
