--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -106,10 +106,11 @@
 		<script src="javascript/ScrMenu.js"></script>
 		<script src="javascript/ScrGame.js"></script>
 		<script src="javascript/ScrSpeedGame.js"></script>
+		<script src="javascript/WndBank.js"></script>
+		<script src="javascript/WndBankrolls.js"></script>
+		<script src="javascript/WndHistory.js"></script>
 		<script src="javascript/WndInfo.js"></script>
 		<script src="javascript/WndInsurance.js"></script>
-		<script src="javascript/WndBank.js"></script>
-		<script src="javascript/WndHistory.js"></script>
 	</head>
 	<body id="preloadko" onload="initGame()">
 		<script>
