--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -97,22 +97,28 @@
 		<script src="javascript/Infura.js"></script>
 		<script src="javascript/Contract.js"></script>
 		<script src="javascript/LogicJS.js"></script>
+		<script src="javascript/LogicMultJS.js"></script>
+		<script src="javascript/RoomJS.js"></script>
 		<script src="javascript/daoLang.js"></script>
 		<script src="javascript/tooltip.js"></script>
 		<script src="javascript/main.js"></script>
 		<script src="javascript/erc20call.js"></script>
 		<script src="javascript/ItemLoading.js"></script>
 		<script src="javascript/ItemMixing.js"></script>
+		<script src="javascript/ItemUser.js"></script>
+		<script src="javascript/ItemUsers.js"></script>
 		<script src="javascript/ScrMenu.js"></script>
 		<script src="javascript/ScrGame.js"></script>
 		<script src="javascript/ScrSpeedGame.js"></script>
+		<script src="javascript/ScrTest.js"></script>
 		<script src="javascript/WndBank.js"></script>
 		<script src="javascript/WndBankrolls.js"></script>
 		<script src="javascript/WndHistory.js"></script>
 		<script src="javascript/WndInfo.js"></script>
 		<script src="javascript/WndInsurance.js"></script>
 	</head>
-	<body id="preloadko" onload="initGame()">
+	<!-- <body id="preloadko" onload="initGame()"> -->
+	<body onload="initGame()">
 		<script>
 		  window.fbAsyncInit = function() {
 			FB.init({
