--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -71,8 +71,8 @@
 		<script type="text/javascript" src="javascript/web3.sha3.js"></script>
 		
 		<!-- <script src="http://localhost:8888/static/js/bundle.js"></script> -->
-		<!-- <script src="https://platform.dao.casino/api/lib/DC.js?v=1.4"></script> -->
-		<script src="javascript/DC.js"></script>
+		<script src="https://platform.dao.casino/api/lib/DC.js?v=1.5"></script>
+		<!-- <script src="javascript/DC.js"></script> -->
 
 		<script>
 			document.addEventListener("DOMContentLoaded", function(){
