--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -102,6 +102,7 @@
 		<script src="javascript/RoomJS.js"></script>
 		<script src="javascript/daoLang.js"></script>
 		<script src="javascript/tooltip.js"></script>
+		<script src="javascript/LevelInfo.js"></script>
 		<script src="javascript/main.js"></script>
 		<script src="javascript/erc20call.js"></script>
 		<script src="javascript/ItemLoading.js"></script>
@@ -110,7 +111,7 @@
 		<script src="javascript/ItemUsers.js"></script>
 		<script src="javascript/ScrMenu.js"></script>
 		<script src="javascript/ScrGame.js"></script>
-		<script src="javascript/ScrSpeedGame.js"></script>
+		<script src="javascript/ScrSpeedGame.js?v=1.0"></script>
 		<script src="javascript/ScrTest.js"></script>
 		<script src="javascript/WndBank.js"></script>
 		<script src="javascript/WndBankrolls.js"></script>
