--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -13,11 +13,27 @@
 				  families: ['Digital-7']
 				}
 			});
+		  WebFont.load({
+			custom: {
+			  families: ['Archivo Black']
+			}
+		  });
 		</script>
 		
 		<!--CSS style import-->
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="/css/preloader.css" lazyload>
+		
+		<style type="text/css">
+			@import url("http://fast.fonts.net/t/1.css?apiType=css&projectid=420aa0be-8d83-4acb-a13a-9bd9d4649d11");
+			@font-face {
+				font-family: 'Archivo Black';
+				src: url('fonts/ArchivoBlack-Regular.eot?#iefix') format('embedded-opentype'),  url('fonts/ArchivoBlack-Regular.otf')  format('opentype'),
+					 url('fonts/ArchivoBlack-Regular.woff') format('woff'), url('fonts/ArchivoBlack-Regular.ttf')  format('truetype'), url('fonts/ArchivoBlack-Regular.svg#ArchivoBlack-Regular') format('svg');
+				font-weight: normal;
+				font-style: normal;
+			}
+		</style>
 		
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -95,6 +111,7 @@
 		<script src="javascript/visibly.js"></script>
 		
 		<!-- main program -->
+		<script src="javascript/MovieClip.js"></script>
 		<script src="javascript/Infura.js"></script>
 		<script src="javascript/Contract.js"></script>
 		<script src="javascript/LogicJS.js"></script>
