--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -22,7 +22,7 @@
 		
 		<!--CSS style import-->
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="/css/preloader.css" lazyload>
+		<!-- <link rel="stylesheet" href="/css/preloader.css" lazyload> -->
 		
 		<style type="text/css">
 			@import url("http://fast.fonts.net/t/1.css?apiType=css&projectid=420aa0be-8d83-4acb-a13a-9bd9d4649d11");
@@ -102,8 +102,8 @@
 		<script src="javascript/tweenjs-0.6.2.min.js"></script>
 		<script src="javascript/ResizeManager.js"></script>
 		
-		<script src="javascript/configuration.js"></script>
-		<script src="../../../js/configuration.js"></script>
+		<!-- <script src="javascript/configuration.js"></script> -->
+		<!-- <script src="../../../js/configuration.js"></script> -->
 
 		<!-- <script src="javascript/lightwallet.min.js"></script> -->
 		<!-- <script src="../../../js/erc20call.js"></script> -->
