--- a/games/bj/index.html
+++ b/games/bj/index.html
@@ -55,6 +55,15 @@
 			fbq('init', '1030004810417034'); // Insert your pixel ID here.
 			fbq('track', 'PageView');
 		</script>
+		<!-- Global Site Tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-92023514-2"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments)};
+		  gtag('js', new Date());
+
+		 gtag('config', 'UA-92023514-2');
+		</script>
 		<noscript>
 			<img height="1" width="1" style="display:none"
 			src="https://www.facebook.com/tr?id=1030004810417034&ev=PageView&noscript=1"
